force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_MPProfile__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MPProfile__c</fullName>
    <description>This field is for Connections Process</description>
    <label>MP Profile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UPS00001</fullName>
                <label>Plot</label>
            </value>
            <value>
                <fullName>UPS00002</fullName>
                <label>Un-Metered Supplier</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>