force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_NoofBedrooms__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NoofBedrooms__c</fullName>
    <description>This field is for Connections process.</description>
    <label>No of Bedrooms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>1-2 Bedrooms</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>3-4 Bedrooms</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>5 or more Bedrooms</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>