force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_NOUSED__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NOUSED__c</fullName>
    <description>This field is for Connections process.</description>
    <label>NO USED</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>X</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>NULL</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>