force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_Number__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Number__c</fullName>
    <description>This field is for connections purpose.</description>
    <label>Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Odd</fullName>
            </value>
            <value>
                <fullName>Even</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>