force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_Phase__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Phase__c</fullName>
    <description>This field is for Connections process</description>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Single Phase</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Split Phase</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Three Phase</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>