force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_PlotID__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PlotID__c</fullName>
    <description>This field is for Connections process</description>
    <label>Plot ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>