force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_PlotNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PlotNumber__c</fullName>
    <description>This field is for Connections Process</description>
    <label>Plot Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>