force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_PlotNumbers__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PlotNumbers__c</fullName>
    <description>This field is for Connections process</description>
    <label>Plot Numbers</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>