force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_PostCode__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PostCode__c</fullName>
    <description>This field is for Connections Process</description>
    <label>Post Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>