force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_Prefix__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Prefix__c</fullName>
    <description>This field is for Connections purpose</description>
    <label>Prefix</label>
    <length>5</length>
    <type>Text</type>
</CustomField>