force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_PropertyID__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PropertyID__c</fullName>
    <description>This field is for Connections process</description>
    <label>Property ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>