force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_PropertyID_Formula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PropertyID_Formula__c</fullName>
    <description>This field will be used for property Id to be mapped with SAP to identify correct supplier code</description>
    <formula>(MID(Id, 4, LEN(Id) - 3))</formula>
    <label>Property ID</label>
    <type>Text</type>
</CustomField>