force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_PropertyType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PropertyType__c</fullName>
    <description>This field is for Connections Process.</description>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0000000001</fullName>
                <label>Commercial</label>
            </value>
            <value>
                <fullName>0000000002</fullName>
                <label>Detached</label>
            </value>
            <value>
                <fullName>0000000003</fullName>
                <label>Terraced</label>
            </value>
            <value>
                <fullName>0000000004</fullName>
                <label>Flat</label>
            </value>
            <value>
                <fullName>0000000005</fullName>
                <label>Landlords</label>
            </value>
            <value>
                <fullName>0000000006</fullName>
                <label>Semi</label>
            </value>
            <value>
                <fullName>0000000008</fullName>
                <label>Farms</label>
            </value>
            <value>
                <fullName>0000000009</fullName>
                <label>Unit</label>
            </value>
            <value>
                <fullName>0000000010</fullName>
                <label>House</label>
            </value>
            <value>
                <fullName>0000000007</fullName>
                <label>Street Lighting</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>