force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_Ratings__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Ratings__c</fullName>
    <description>This field is for Connections process.</description>
    <label>Ratings</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>