force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_Status__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Status__c</fullName>
    <defaultValue>&quot;Active&quot;</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>To be delete</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
                <isActive>false</isActive>
                <label>Deleted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>