force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_StreetName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_StreetName__c</fullName>
    <description>This field is for Connections Process</description>
    <label>Street Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>