force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_Supplier__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Supplier__c</fullName>
    <description>This field is for Connections process.</description>
    <label>Supplier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Scottish Power PLC</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>British Gas</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>MANWEB</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Eastern Electricity</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>East Midland Electricity</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>London Electricity</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Midlands Electricity</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Northern</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>NORWEB</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Hydro</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>SEEBOARD</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Southern</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>SWALEC</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>SWEB</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Yorkshire Electricity</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>