force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_SupplyPointCode__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SupplyPointCode__c</fullName>
    <description>This field is for Connections process</description>
    <externalId>true</externalId>
    <label>Supply Point Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>