force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_TechnologyType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TechnologyType__c</fullName>
    <description>This field is for Connections process</description>
    <label>Technology Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Engine (combustion / reciprocating)</fullName>
            </value>
            <value>
                <fullName>Steam turbine (thermal power plant)</fullName>
            </value>
            <value>
                <fullName>Gas turbine (OCGT)</fullName>
            </value>
            <value>
                <fullName>Steam - gas turbine (CCGT)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Data not available</fullName>
            </value>
            <value>
                <fullName>Geothermal power plant</fullName>
            </value>
            <value>
                <fullName>Fuel cell</fullName>
            </value>
            <value>
                <fullName>Photovoltaic</fullName>
            </value>
            <value>
                <fullName>Storage - Chemical</fullName>
            </value>
            <value>
                <fullName>Storage - Electrical</fullName>
            </value>
            <value>
                <fullName>Storage - Mechanical - Compressed Air</fullName>
            </value>
            <value>
                <fullName>Storage - Mechanical - Liquid Air</fullName>
            </value>
            <value>
                <fullName>Storage - Mechanical - Pumped Hydro</fullName>
            </value>
            <value>
                <fullName>Storage - Mechanical - Flywheel</fullName>
            </value>
            <value>
                <fullName>Storage - Thermal</fullName>
            </value>
            <value>
                <fullName>Storage - Electrochemical (Batteries)</fullName>
            </value>
            <value>
                <fullName>Storage - Other</fullName>
            </value>
            <value>
                <fullName>Hydro - Run of river</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>