force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_TownCity__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TownCity__c</fullName>
    <description>This field is for Connections process.</description>
    <label>Town/City</label>
    <length>60</length>
    <type>Text</type>
</CustomField>