force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_UNIT__c.field-meta.xml
<CustomField>
    <fullName>SPEN_UNIT__c</fullName>
    <defaultValue>&apos;KVA&apos;</defaultValue>
    <description>This field is for Connections process</description>
    <label>UNIT</label>
    <length>50</length>
    <type>Text</type>
</CustomField>