force-app/main/default/objects/SPEN_Plot__c/fields/SPEN_UPRN__c.field-meta.xml
<CustomField>
    <fullName>SPEN_UPRN__c</fullName>
    <description>This field is for Connections process.</description>
    <label>UPRN</label>
    <length>12</length>
    <type>Text</type>
</CustomField>