force-app/main/default/objects/SPEN_Plot__c/recordTypes/SPEN_Plot.recordType-meta.xml
<RecordType>
    <fullName>SPEN_Plot</fullName>
    <active>true</active>
    <description>This record type is for Connections process</description>
    <label>SPEN Plot</label>
</RecordType>