force-app/main/default/objects/SPEN_Plot__c/validationRules/SPEN_MaxPowerValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_MaxPowerValidation</fullName>
    <active>true</active>
    <description>9309 changes</description>
    <errorConditionFormula>AND (NOT (ISNEW()), Not( ISBLANK( SPEN_MaxPowerkVA__c  )) , Not(Regex(Text( SPEN_MaxPowerkVA__c ), &quot;^-?(?:[0-9]+|[0-9]*\\.[0-9]{1,2})$&quot;)))</errorConditionFormula>
    <errorDisplayField>SPEN_MaxPowerkVA__c</errorDisplayField>
    <errorMessage>Please enter Max Power with 2 decimal places</errorMessage>
</ValidationRule>