force-app/main/default/objects/SPEN_Plot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SPEN_CaseRecord__c</columns>
    <columns>SPEN_SupplyPointCode__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SPEN_Status__c</columns>
    <columns>SPEN_PlotNumber__c</columns>
    <columns>SPEN_PostCode__c</columns>
    <columns>SPEN_Prefix__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>